fix contrast a little bit

--- a/assets/contrast.css
+++ b/assets/contrast.css
@@ -38,7 +38,7 @@ a.button:hover { background: #26a69a !important; -webkit-filter: brightness(120%
 .menuBar a.button:hover { background: #4378bc !important; }
 .menuBar a.button:active { background: #4378bc !important; }
 .menuBar a.button.disabled { background: none !important; }
-.headerBackground { background: #4d88d5 !important; }
+.headerBackground { background: #4d88d5 !important; overflow: hidden !important; }
 .menuBar { background: #2e5280 !important; border-radius: 0 !important; }
 body { background: #fafafa !important; color: #000 !important; }
 .bodyBG { visibility: hidden !important; }
